# colour-analysis-three.js

./: .gitignore  .pre-commit-config.yaml  .style.yapf  CONTRIBUTORS.rst  Dockerfile  README.rst  app.py  colour_analysis.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tasks.py  webpack.config.js
colour_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: common.js  gui.js  index.js
src/views/: gamut-view.js  image-view.js  orthographic-view.js  perspective-view.js  view.js
src/visuals/: colourspace-visual.js  image-scatter-visual.js  image-visual.js  pointer-gamut-visual.js  spectral-locus-visual.js  view-axes-visual.js  visible-spectrum-visual.js  visual.js
static/images/: SonyF35-StillLife.ACES2065-1.exr  SonyF35-StillLife.sRGB.exr  UnitCube.exr
static/js/: colour-analysis.js  common.js  gui.js
static/js/views/: gamutView.js  imageView.js  orthographicView.js  perspectiveView.js  view.js
static/js/visuals/: colourspaceVisual.js  imageScatterVisual.js  imageVisual.js  spectralLocusVisual.js  viewAxesVisual.js  visual.js
templates/: index.html
