[tool.poetry]
name = "colour-analysis"
version = "0.1.6"
description = "Image analysis tools based on Colour and Three.js"
license = "BSD-3-Clause"
authors = [ "Colour Developers" ]
readme = 'README.rst'
repository = "https://github.com/colour-science/colour-analysis-three.js"
homepage = "https://www.colour-science.org/"
keywords = [
    "analysis",
    "color",
    "color-science",
    "color-space",
    "color-spaces",
    "colorspace",
    "colorspaces",
    "colour",
    "colour-science",
    "colour-space",
    "colour-spaces",
    "colourspace",
    "colourspaces",
    "docker",
    "imaging",
    "python",
    "three-js",
    "visualization",
    "website"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.5"
colour-science = "^0.3.14"
flask = "*"
flask-caching = "*"
flask-compress = { git = "https://github.com/colour-science/flask-compress" }
gunicorn = "*"
matplotlib = "*"
networkx = "*"

coverage = { version = "*", optional = true }  # Development dependency.
flake8 = { version = "*", optional = true }  # Development dependency.
invoke = { version = "*", optional = true }  # Development dependency.
nose = { version = "*", optional = true }  # Development dependency.
pre-commit = { version = "*", optional = true }  # Development dependency.
pytest = { version = "*", optional = true }  # Development dependency.
yapf = { version = "0.23", optional = true }  # Development dependency.

[tool.poetry.dev-dependencies]
coverage = "*"
flake8 = "*"
invoke = "*"
nose = "*"
pre-commit = "*"
pytest = "*"
yapf = "*"

[tool.poetry.extras]
development = [
    "coverage",
    "flake8",
    "invoke",
    "nose",
    "pre",
    "pytest",
    "yapf"
]

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
